--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
+    "toast": "^0.5.4",
     "toaster": "^0.1.2",
     "zod": "^4.1.12"
   }
