--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NEXT_SKIP_TURBOPACK=1 next build",
     "start": "next start"
   },
   "packageManager": "npm@10.5.2",
