--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "lucide-react": "^0.544.0",
     "markdown": "^0.5.0",
     "markdown-it": "^14.1.0",
-    "next": "^16.0.0-canary.0",
+    "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.29",
     "next-sanity": "^0.8.5",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-is": "^19.2.0",
     "sanity": "^4.10.3",
     "sanity-plugin-markdown": "^2.0.0",
