--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "node --max_old_space_size=4096 ./node_modules/next/dist/bin/next build",
     "start": "next start"
-  }
-  ,
+  },
   "packageManager": "npm@10.5.2",
   "overrides": {
     "react": "$react",
@@ -15,6 +14,7 @@
     "next": "$next"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.13.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@sanity/client": "^7.12.0",
@@ -51,5 +51,8 @@
     "toast": "^0.5.4",
     "toaster": "^0.1.2",
     "zod": "^4.1.12"
+  },
+  "devDependencies" : {
+    "@netlify/plugin-nextjs" : "5.8.2"
   }
 }
