--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "lucide-react": "^0.544.0",
     "markdown": "^0.5.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.0.3",
+    "next": "14.2.4",
     "next-auth": "^5.0.0-beta.29",
     "next-sanity": "^0.8.5",
     "postcss": "^8.5.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-is": "^19.2.0",
     "sanity": "^4.10.3",
     "sanity-plugin-markdown": "^2.0.0",
@@ -52,6 +52,6 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.14.0"
+    "@netlify/plugin-nextjs": "5.13.0"
   }
 }
