--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sanity": "^4.10.3",
     "sanity-plugin-markdown": "^2.0.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.4",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
@@ -52,6 +53,6 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "5.13.0"
+    "@netlify/plugin-nextjs": "^5.14.0"
   }
 }
